assets/css/style.css
body {
  background-color: #f5f5f5;
}

/* Navbar */
#text-info a {
  text-decoration: none;
  color: gray;
}

#text-info a:hover {
  color: #0d6efd;
}

.input-search {
  width: 400px;
}

#nav-bottom {
  display: none;
}

.nav-icon {
  width: 100%;
  background-color: #ffffff;
  overflow: auto;
}

.nav-icon a {
  float: left;
  width: 20%;
  text-align: center;
  transition: all 0.3s ease;
  font-size: 27px;
  color: #0d6efd;
}

.nav-icon a:hover {
  color: black;
}

.dropdown:hover .dropdown-menu {
  display: block;
}

.dropdown-item:hover {
  color: #0D6EFD;
  background-color: #f1f1f1;
}

/* End Navbar */

/* Carousel */
#carousel {
  padding-top: 156px;
  padding-bottom: 50px;
}

.carousel-item img {
  width: 100%;
  height: 400px;
}

/* End Carousel */

/* Info Promo */
.card-customer {
  width: 17rem;
  height: auto;
}

.text-promo {
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

#info-customer {
  margin-bottom: 50px;
}

/* End Info Promo */

/* Product */
.picture-product {
  width: 100%;
  height: 160px;
}

#product {
  margin-bottom: 50px;
}

#col-product:hover {
  border: 2px solid #0d6efd;
}

#banner-search {
  margin-top: 156px;
}

/* View Product */
.image-product {
  width: 100%;
  height: 350px;
  margin-top: 70px;
}

#quantity {
  font-weight: bold;
  -moz-appearance: textfield;
  text-align: center;
  font-size: 15px;
  border: none;
  background-color: #ffffff;
  color: #202030;
  outline: none;
}

#quantitymobile {
  font-weight: bold;
  -moz-appearance: textfield;
  text-align: center;
  font-size: 15px;
  border: none;
  background-color: #ffffff;
  color: #202030;
  outline: none;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.plus-minus {
  font-weight: bold;
  color: #fff;
  background-color: #3264fe;
  border: none;
  font-size: 15px;
  cursor: pointer;
}

#decrement {
  padding: 10px 15px 15px 15px;
  border-radius: 15px 0 0 15px;
}

#decrementmobile {
  padding: 10px 15px 15px 15px;
  border-radius: 15px 0 0 15px;
}


#increment {
  padding: 10px 15px 15px 10px;
  border-radius: 0 15px 15px 0;
}

#incrementmobile {
  padding: 10px 15px 15px 10px;
  border-radius: 0 15px 15px 0;
}

#mobile-view {
  display: none;
}

#dekstop-view {
  padding-top: 156px;
  padding-bottom: 49px;
}

.modal-backdrop {
  display: none;
}

/* End View Product */
/* End Product */

/* Cart */
.text-cart-mobile-view {
  margin-top: 88px;
}

/* End Cart */

/* Profile */
.my-activity a {
  color: black;
}

.my-activity a:hover {
  color: #0D6EFD;
}

/* End Profile */

/* Wishlist */
#wishlist {
  padding-top: 156px;
}

/* End Wishlist */

/* Login & Regitser Form */
.head-brand {
  padding-top: 40px;
  padding-bottom: 40px;
  font-family: "Kanit", sans-serif;
}

.header-form {
  padding-top: 35px;
  padding-bottom: 35px;
}

#container-form {
  overflow-y: hidden;
  overflow-x: hidden;
  width: 380px;
  border: 3px solid gainsboro;
  background-color: #ffffff;
  margin-bottom: 50px;
}

/* End Login & Regitser Form */

/* Responsive */
@media screen and (max-width: 991px) {
  .input-search {
    width: 250px;
  }
}

@media screen and (max-width: 767px) {
  .input-search {
    width: 150px;
  }

  .card-customer {
    width: 100%;
  }

  #container-form {
    width: 350px;
  }

  #image-product-view {
    width: 150px;
    height: 150px;
  }
}

/* Medium */
@media screen and (max-width: 600px) {
  #text-info {
    display: none;
  }

  #carousel {
    padding-top: 91px;
    padding-bottom: 25px;
  }

  #banner-recomend {
    margin-top: -25px;
  }

  #detail-product {
    padding-top: 91px;
  }

  #dekstop-view {
    padding-top: 116px;
    padding-bottom: 50px;
  }
}

/* Mobile Device */
@media screen and (max-width: 484px) {
  #product {
    margin-bottom: 84px;
  }

  #cart-mobile {
    margin-bottom: 84px;
  }

  #wishlist {
    margin-bottom: 84px;
    margin-top: -45px;
  }

  .checkout {
    margin-top: 290px;
  }

  #button-navbar {
    display: none;
  }

  .input-search {
    width: 200px;
  }

  .carousel-item img {
    height: 300px;
  }

  #nav-bottom {
    display: contents;
  }

  #mobile-view {
    display: contents;
  }

  #image-product-view {
    width: 150px;
    height: 150px;
  }

  #desc-view-product {
    padding-left: 0px;
    padding-top: 0px;
  }

  .delivery-text {
    display: none;
  }

  #dekstop-view {
    display: none;
  }

  #banner-search {
    margin-top: 94px;
  }
}

/* End Responsive */

